# zellij-tab-bar-indexed

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
compact-bar/: Cargo.toml
compact-bar/src/: lib.rs  main.rs  tab.rs
src/: main.rs
tab-bar/: Cargo.toml
tab-bar/src/: lib.rs  main.rs  tab.rs
