[package]
name = "tab-bar"
version = "0.1.0"
authors = [
    "Jonah Caplan <jonahcaplan@gmail.com>",
    "Ilya Voronin <ivoronin@gmail.com>"
]
edition = "2021"
license = "MIT"
description = "Tab-bar plugin for Zellij with optional tab indices"
repository = "https://github.com/ivoronin/zellij-tab-bar-indexed"

[dependencies]
colored = "3"
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = "0.43"
zellij-tile-utils = "0.43"

[profile.release]
opt-level = "s"
lto = true
strip = true
